# Farog

./: README.md
.GitHub/workflows/: ci.yml  release.yml  security-audit.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml
examples/serverless-handler/: README.md  farog.toml
examples/serverless-handler/src/: handler.ts
runtime/: CMakeLists.txt
